--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -1,25 +1,36 @@
-<header class="header">
+<header class="header" data-fixed="inner">
   <div class="container header__container">
-    <a class="logo header__logo" href="#">
-      <picture>
-        <source srcset="" type="image/webp" />
-        <img src="" alt="Логотип " />
-      </picture>
-    </a>
+    <a class="logo header__logo" href="#">mitravel</a>
     <nav class="navigation header__navigation">
       <ul class="navigation__list">
         <li class="navigation__item">
-          <a class="navigation__link" href="#"></a>
+          <a class="navigation__link" href="#"
+            >Mother Earth Hosts Our Travels</a
+          >
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#"
+            >Become A Travel Pro In One Easy Lesson</a
+          >
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">Featured Stories</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">Featured Photos</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">Sign Up Our Newsletter</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">Inspirations</a>
         </li>
       </ul>
     </nav>
+    <button
+      class="mobile-menu-toggler header__mmt"
+      type="button"
+      aria-label="Меню"
+    ></button>
   </div>
-  <button
-    class="mobile-menu-toggler header__mmt"
-    type="button"
-    aria-label="Меню"
-    data-fixed="true"
-  >
-    <span class="mobile-menu-toggler__element"></span>
-  </button>
 </header>
