--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -1,5 +1,21 @@
 <header class="header" data-fixed="inner">
   <div class="container header__container">
+    <ul class="header__social-list social-list">
+      <li class="social-list__item">
+        <a class="social-list__link" href="#" aria-label="link to facebook">
+          <svg class="social-list__icon" width="11" height="20">
+            <use xlink:href="../img/svgSprite/sprite.svg#fb"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a class="social-list__link" href="#" aria-label="link to twitter">
+          <svg class="social-list__icon" width="20" height="20">
+            <use xlink:href="../img/svgSprite/sprite.svg#twitter"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
     <a class="logo header__logo" href="#">mitravel</a>
     <nav class="navigation header__navigation">
       <ul class="navigation__list">
