--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,7 +26,7 @@
     />
     <link rel="stylesheet" href="./css/style.min.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:100,regular,700,"
+      href="https://fonts.googleapis.com/css?family=Roboto:100,regular,700"
       rel="stylesheet"
     />
   </head>
@@ -35,7 +35,7 @@
     @@include("./_header.html")
     <main>
       <!-- Use this file for include HTML components. For example @@include("./_example.html").  -->
-      @@include('./_first-screen.html')
+      @@include('./_first-screen.html') @@include('./_become.html')
     </main>
     @@include("./_footer.html")
     <script src="./js/index.js"></script>
