--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,6 +36,7 @@
     <main>
       <!-- Use this file for include HTML components. For example @@include("./_example.html").  -->
       @@include('./_first-screen.html') @@include('./_become.html')
+      @@include('./_stories.html')
     </main>
     @@include("./_footer.html")
     <script src="./js/index.js"></script>
