add newsletter block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,7 +36,8 @@
     <main>
       <!-- Use this file for include HTML components. For example @@include("./_example.html").  -->
       @@include('./_first-screen.html') @@include('./_become.html')
-      @@include('./_stories.html') @@include('./_photos.html')
+      @@include('./_stories.html')
+      @@include('./_photos.html')@@include('./_newsletter.html')
     </main>
     @@include("./_footer.html")
     <script src="./js/index.js"></script>
