add inspiration block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,9 +35,7 @@
     @@include("./_header.html")
     <main>
       <!-- Use this file for include HTML components. For example @@include("./_example.html").  -->
-      @@include('./_first-screen.html') @@include('./_become.html')
-      @@include('./_stories.html')
-      @@include('./_photos.html')@@include('./_newsletter.html')
+      @@include('./_first-screen.html')@@include('./_become.html')@@include('./_stories.html')@@include('./_photos.html')@@include('./_newsletter.html')@@include('./_inspiration.html')
     </main>
     @@include("./_footer.html")
     <script src="./js/index.js"></script>
