--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -1,2 +1,92 @@
 <footer class="footer">
+  <div class="container footer__container">
+    <div class="footer__column">
+      <h3 class="footer__title">Company</h3>
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a class="footer__link" href="#">About</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Press</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Blog</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Careers</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Security</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Driver Centre</a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__column">
+      <h3 class="footer__title">Information</h3>
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a class="footer__link" href="#">Our Story</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Recipes</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Nutrition</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Resources</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Newsletter</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__column">
+      <h3 class="footer__title">Information</h3>
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a class="footer__link" href="#">Customer service</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Recommend a restaurant</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Signup a restaurant</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Jobs</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Press</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Terms of use</a>
+        </li>
+      </ul>
+    </div>
+    <form class="footer__subscribe subscribe" action="#">
+      <h3 class="footer__title subscribe__title">Subscribe Now</h3>
+      <input class="subscribe__input" type="email" placeholder="Your email" />
+      <button class="btn btn--wide" type="submit">Subscribe Now</button>
+    </form>
+    <div class="footer__bottom">
+      <p class="footer__copyright">
+        © 2019 Mass Impressions. Designed by Tran Mau Tri Tam for Mass
+        Impressions. All rights reserved.
+      </p>
+      <ul class="footer__list footer__list--horizontal">
+        <li class="footer__item">
+          <a class="footer__link" href="#">Terms of Service</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Privacy Policy</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </footer>
