fix validation problem

--- a/src/html/_newsletter.html
+++ b/src/html/_newsletter.html
@@ -15,7 +15,7 @@
       </div>
       <form class="newsletter__form sign-up" action="#">
         <fieldset class="sign-up__fieldset">
-          <input class="sign-up__input" type="name" placeholder="name" />
+          <input class="sign-up__input" type="text" placeholder="name" />
           <input class="sign-up__input" type="email" placeholder="email" />
           <input class="sign-up__input" type="tel" placeholder="phone number" />
         </fieldset>
