--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Mitravel</title>
     <link rel="shortcut icon" href="./img/favicons/favicon.ico" />
     <link
       rel="icon"
