add page navigation

--- a/src/html/_first-screen.html
+++ b/src/html/_first-screen.html
@@ -1,4 +1,4 @@
-<section class="first-screen">
+<section class="first-screen" id="first-screen">
   <div class="container first-screen__container">
     <a href="#" class="btn btn--round first-screen__new-book">New book</a>
     <h1 class="first-screen__title">Mother Earth Hosts Our Travels</h1>
