--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -20,26 +20,28 @@
     <nav class="navigation header__navigation">
       <ul class="navigation__list">
         <li class="navigation__item">
-          <a class="navigation__link" href="#"
+          <a class="navigation__link" href="#first-screen"
             >Mother Earth Hosts Our Travels</a
           >
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="#"
+          <a class="navigation__link" href="#become"
             >Become A Travel Pro In One Easy Lesson</a
           >
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="#">Featured Stories</a>
+          <a class="navigation__link" href="#stories">Featured Stories</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="#">Featured Photos</a>
+          <a class="navigation__link" href="#photos">Featured Photos</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="#">Sign Up Our Newsletter</a>
+          <a class="navigation__link" href="#newsletter"
+            >Sign Up Our Newsletter</a
+          >
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="#">Inspirations</a>
+          <a class="navigation__link" href="#inspiration">Inspirations</a>
         </li>
       </ul>
     </nav>
