--- a/src/html/_inspiration.html
+++ b/src/html/_inspiration.html
@@ -1,4 +1,4 @@
-<section class="inspiration">
+<section class="inspiration" id="inspiration">
   <div class="container inspiration__container">
     <header class="heading inspiration__heading">
       <h2 class="heading__title">Inspirations</h2>
