--- a/src/html/_newsletter.html
+++ b/src/html/_newsletter.html
@@ -1,4 +1,4 @@
-<section class="newsletter">
+<section class="newsletter" id="newsletter">
   <div class="container newsletter__container">
     <div class="newsletter__wrapper">
       <div class="newsletter__text">
