--- a/src/html/_stories.html
+++ b/src/html/_stories.html
@@ -1,4 +1,4 @@
-<section class="stories">
+<section class="stories" id="stories">
   <div class="container stories__container">
     <div class="stories__wrapper">
       <a href="#" class="btn btn--round btn--warning stories__featured-btn"
