--- a/src/html/_become.html
+++ b/src/html/_become.html
@@ -1,4 +1,4 @@
-<section class="become">
+<section class="become" id="become">
   <div class="container become__container">
     <header class="heading become__heading">
       <h2 class="heading__title">Become A Travel Pro In One Easy Lesson</h2>
