--- a/src/html/_photos.html
+++ b/src/html/_photos.html
@@ -1,4 +1,4 @@
-<section class="photos">
+<section class="photos" id="photos">
   <div class="container photos__container">
     <header class="heading photos__heading">
       <h2 class="heading__title">Featured Photos</h2>
