--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,6 +26,7 @@
     />
     <link rel="stylesheet" href="./css/style.min.css" />
     <link
+      async
       href="https://fonts.googleapis.com/css?family=Roboto:100,regular,700"
       rel="stylesheet"
     />
