--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,6 +29,16 @@
       href="https://fonts.googleapis.com/css?family=Roboto:100,regular,700"
       rel="stylesheet"
     />
+    <!-- webp tester -->
+    <script>
+      var i = new Image();
+      i.onload = i.onerror = function () {
+        document.body.classList.add(i.height == 1 ? 'webp' : 'no-webp');
+      };
+      i.src =
+        'data:image/webp;base64,UklGRhoAAABXRUJQVlA4TA0AAAAvAAAAEAcQERGIiP4HAA==';
+    </script>
+    <!-- end webp tester -->
   </head>
 
   <body>
